hphp/hack/test/typecheck/list_union_tuple_assign_bad.php.like_types.exp
File "list_union_tuple_assign_bad.php", line 7, characters 16-20:
Invalid return type (Typing[4110])
File "list_union_tuple_assign_bad.php", line 3, characters 24-26:
Expected int
File "list_union_tuple_assign_bad.php", line 7, characters 16-20:
But got string
